# renderdoc-mcp

./: COMPARISON.md  MCP_TEST_PLAN.md  README.md  ROADMAP.md  maximize-renderdoc-mcp-debug.md  pyproject.toml  renderdoc-mcp-eval-guide.md
src/renderdoc_mcp/: server.py  session.py  util.py
src/renderdoc_mcp/tools/: advanced_tools.py  data_tools.py  diagnostic_tools.py  event_tools.py  performance_tools.py  pipeline_tools.py  resource_tools.py  session_tools.py  shader_tools.py
tests/: test_util.py
